# obenchmark

./: .gitignore  Cargo.toml  README.md
.github/: rust-build.yml
.github/workflows/: rust-build.yml
src/: benchmark_runner.rs  gui.rs  main.rs  report.rs  runner.rs
src/app/: mod.rs  state.rs  theme.rs  ui.rs
src/benchmarks/: cpu.rs  disk.rs  memory.rs  mod.rs
src/benchmarks/gpu/: mod.rs
src/engines/: benchmark.rs  mod.rs  runner.rs  score.rs
src/model/: history.rs  mod.rs  result.rs
src/util/: sysinfo.rs
src/utils/: os_detect.rs  score.rs
